--- a/package.json
+++ b/package.json
@@ -1,15 +1,24 @@
 {
   "name": "katastima",
-  "version": "0.1.0",
+  "version": "0.1.0-alpha",
+  "author": {
+    "name": "Rami Sfari"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://gitlab.com/unicef-second-chance/lprs-tn-front-gu.git"
+  },
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.0.1"
+  },
+  "devDependencies":{
+    "@testing-library/jest-dom": "^5.11.4",
+    "@testing-library/react": "^11.1.0",
+    "@testing-library/user-event": "^12.1.10"
   },
   "scripts": {
     "start": "react-scripts start",
