--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "katastima",
+  "name": "sm",
   "version": "0.1.0-alpha",
   "author": {
     "name": "Rami Sfari",
@@ -8,7 +8,7 @@
   "private": true,
   "repository": {
     "type": "git",
-    "url": "https://github.com/er5bus/katastima.git"
+    "url": "https://github.com/er5bus/sm.git"
   },
   "dependencies": {
     "axios": "^0.21.1",
@@ -19,12 +19,14 @@
     "react": "^17.0.*",
     "react-bootstrap": "^1.5.2",
     "react-dom": "^17.0.*",
+    "react-hot-toast": "^1.0.2",
     "react-i18next": "^11.8.15",
+    "react-motion": "^0.5.2",
     "react-redux": "^7.2.*",
+    "redux-thunk": "^2.3.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.*",
     "redux-persist": "^6.0.0",
-    "redux-saga": "^1.1.3",
     "web-vitals": "^1.0.1",
     "yup": "^0.32.9"
   },
